--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ footer {
 
 </iframe>
 <!-- <section>
-	<img src='./img/lubato.png' width="800">
+	<img src='./img/lubato.PNG' width="800">
 </section> -->
 <aside>
 	<ul>
