--- a/lubato.html
+++ b/lubato.html
@@ -2,8 +2,17 @@
 <html>
 <head>
 	<title></title>
+<style type="text/css">
+div{
+	background-color: #EEEEEE;
+}
+</style>
+	
 </head>
 <body>
-<img src='./img/lubato.PNG' width="800">
+<div >
+<img src='./img/lubato.PNG' width="500" height="150">
+</div>
+
 </body>
 </html>
