--- a/nav01.html
+++ b/nav01.html
@@ -2,8 +2,17 @@
 <html>
 <head>
 	<title></title>
+	<style type="text/css">
+#sub1:hover{
+box-shadow: 5px 5px 10px gray;
+	transform: translate(5px, -5px);
+}	
+</style>
 </head>
 <body>
- <h1>손해보험상식</h1>
+<div id="sub1">
+<img src='./img/lubato.PNG' width="500" height="150">
+</div>
+
 </body>
 </html>
