--- a/nav02.html
+++ b/nav02.html
@@ -2,8 +2,24 @@
 <html>
 <head>
 	<title></title>
+<style type="text/css">
+#sub2 img {
+	width:200px;
+	height:200px;
+	border-radius: 50% 50%;
+}
+#sub2 img:hover{
+	transform: scale(1.5);
+	margin: 50px;
+
+}
+
+</style>	
+
 </head>
 <body>
- <h1>회사소개</h1>
+<div id="sub2">
+<img src='./img/lubato.PNG' width="500" height="350">
+</div>
 </body>
 </html>
