--- a/nav04.html
+++ b/nav04.html
@@ -2,8 +2,22 @@
 <html>
 <head>
 	<title></title>
+<style type="text/css">
+#sub4 img {
+	width:200px;
+	height:200px;
+	border-radius: 30% 30%;
+	margin: 10px;
+}
+#sub4 img:hover{
+	transform: rotate(360deg);
+	transition: transform 1s;
+}		
+</style>	
 </head>
 <body>
- <h1>마이페이지</h1>
+<div id="sub4">
+<img src='./img/lubato.PNG' width="500" height="150" >
+</div>
 </body>
 </html>
