--- a/nav05.html
+++ b/nav05.html
@@ -2,8 +2,28 @@
 <html>
 <head>
 	<title></title>
+<style>
+@keyframes alpha {
+	from {  		
+opacity: 1.0;
+	}
+	to {  	
+opacity: 0;
+	  }
+}
+img:hover {
+	animation-name : alpha;
+	animation-duration : 3s;
+
+}
+</style>
+
+
+</style>	
 </head>
 <body>
- <h1>고객센터</h1>
+<div> 
+<img src='./img/lubato.PNG' width="500" height="150" >
+</div>
 </body>
 </html>
