--- a/nav06.html
+++ b/nav06.html
@@ -2,8 +2,24 @@
 <html>
 <head>
 	<title></title>
+<style type="text/css">
+	img {
+  width: 500px;
+  height: 150px;
+  /*background: lightgray;*/
+  transition: width 2s;
+}
+  img:hover {
+  /*width: 700px;*/
+  transform: translate(500px);
+  transition: transform 3s;
+}
+</style>	
 </head>
 <body>
- <h1>보험료안내</h1>
+<div>
+<img src='./img/lubato.PNG'  >
+
+</div>
 </body>
 </html>
