--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ nav {
 	margin-top: 10px;
 	padding-top: 10px;
 	border: solid 0px #cccccc; 
+	background-color: #dddddd;
 }
 nav li {
 	display: inline;
@@ -30,6 +31,7 @@ header {
 	height: 110px;
 	margin-top: 10px;
 	border: solid 0px #cccccc; 
+	background-color: #eeeeee;
 }
 #logo {
 	margin: 20px;
@@ -45,6 +47,7 @@ section {
 	float: left;
 	margin-top: 10px;
 	border: solid 0px #cccccc; 
+	background-color: #eeeeee;
 }
 
 aside {
@@ -53,6 +56,7 @@ border: solid 0px #cccccc;
 margin-top: 10px;
 margin-left: 40px;
 margin-right: 10px;
+background-color: #dddddd;
 }
 aside li {
 	margin-bottom: 70px;
@@ -64,6 +68,7 @@ footer {
 	border-top: solid 0px #cccccc;
 	margin-top: 20px;
 	border: solid 0px #cccccc; 
+	background-color: #eeeeee;
 }
 #address {
 	float: left;
@@ -80,6 +85,7 @@ footer {
 	margin: auto;
 	border: solid 0px #cccccc; 
 }
+
 </style>
 </head>
 <body id="page">
@@ -105,10 +111,13 @@ footer {
 	</ul>
 </nav>
 <div class='clear'></div> <!-- float 속성 해제 -->
-<iframe src="lubato.html" name="bb" width="800" height="300" scrolling="no" frameborder="0">
+<iframe src="lubato.html" name="bb" width="800" height="500" scrolling="no" frameborder="0">
 	
 
 </iframe>
+<!-- <section>
+	<img src='./img/lubato.png' width="800">
+</section> -->
 <aside>
 	<ul>
 		<li>보험료계산하기 </li>
