--- a/lubato.html
+++ b/lubato.html
@@ -4,15 +4,18 @@
 	<title></title>
 <style type="text/css">
 div{
-	background-color: #EEEEEE;
+	background-color: #dddddd;
+	margin-left: -10px;
 }
 </style>
 	
 </head>
 <body>
 <div >
-<img src='./img/lubato.PNG' width="500" height="150">
+<img src='./img/lubato.PNG' width="500" height="250">
 </div>
-
+<div >
+<img src='./img/lubato.PNG' width="500" height="250">
+</div>
 </body>
 </html>
